--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.MovieApp" parent="Theme.Material3.DayNight.NoActionBar" />
+    <style name="Theme.MovieApp" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:statusBarColor">@color/main</item>
+        <item name="android:navigationBarColor">@color/main</item>
+
+    </style>
+
 </resources>
