--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -66,7 +66,7 @@
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="32dp"
         android:backgroundTint="@color/main"
-        android:text="Ingresar"
+        android:text="@string/fragment_login_title_login"
         android:textAllCaps="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
